--- a/2010/thesis/elastic.tex
+++ b/2010/thesis/elastic.tex
@@ -125,7 +125,7 @@ The exponential slope is also useful for a localization of the dips/shoulders. A
 
 It is interesting to look at the phase of the amplitude ($\arg F(t)$), although it is not directly observable (except a very narrow region of very low $|t|$, where the Coulomb interference is important). The phase is plotted in \Fg{el mod phase}, a related parameter 
 \eqref{\rh(t) = {\Re F(t)\over \Im F(t)}}{el rh}
-is shown in \Fg{el mod rho}. We see that the models predict almost imaginary amplitude in the forward direction $t=0\un{GeV^2}$, which is required by the asymptotic theorems (see e.g. Sc.~4 in \bref{kl96}). Another common feature is that the small real part of the amplitude changes sing from positive to negative in a low $|t|$ region (in our case around $|t| \approx 0.1\un{GeV^2}$), just as required by the theorem of Martin \bref{martin97}. However, there are no general requirements for the $t$-dependence of the phase further from the forward direction. In that sense, it is interesting to find a very similar behavior for most of the models. The one of Islam et al. deviates from the trend above $|t|\approx 1\un{GeV^2}$; this is the point where the diffractive component of their amplitude (qualitatively similar mechanism to the other models) starts to be dominated by the other two components that, conceptually, are quite different from the other models.
+is shown in \Fg{el mod rho}. We see that the models predict almost imaginary amplitude in the forward direction $t=0\un{GeV^2}$, which is required by the asymptotic theorems (see e.g. Sec.~4 in \bref{kl96}). Another common feature is that the small real part of the amplitude changes sing from positive to negative in a low $|t|$ region (in our case around $|t| \approx 0.1\un{GeV^2}$), just as required by the theorem of Martin \bref{martin97}. However, there are no general requirements for the $t$-dependence of the phase further from the forward direction. In that sense, it is interesting to find a very similar behavior for most of the models. The one of Islam et al. deviates from the trend above $|t|\approx 1\un{GeV^2}$; this is the point where the diffractive component of their amplitude (qualitatively similar mechanism to the other models) starts to be dominated by the other two components that, conceptually, are quite different from the other models.
 
 These plots also reveal the common mechanism how the first dip appears - the imaginary part vanishes and it is only the real part which contributes and thereby controls the depth of the dip.
 
@@ -133,7 +133,7 @@ These plots also reveal the common mechanism how the first dip appears - the ima
 
 \fig{fig/pdf/el_mod_rho.pdf}{el mod rho}{The $t$-dependence of $\rho$ as predicted by the four models. Legend as in \Fg{el mod B}.}
 
-As anticipated above, there are not many hints for fixing the phase of the amplitude. Still there is one more worth mentioning. For a more detailed discussion, see Sc.~7 in \bref{kklp11}, here we just outline the main ideas. The argument is related to the impact-parameter picture. It sounds natural that high-impact-parameter collisions, when the particles are merely glancing, would result rather in an elastic than inelastic scattering. And vice versa -- a head-on collision is likely to break the particles and lead to an inelastic scattering. Tab.~3 in the quoted table presents RMS impact-parameter values of elastic and inelastic collisions, derived for the four models. Surprisingly enough, the inelastic collisions came out more peripheral (RMS of $\approx 1.4\un{fm}$) than the elastic ones (RMS of $\approx 0.9\un{fm}$). The authors suggested a solution to this puzzle -- modifying the phase such that it raises sharply at low-$|t|$ region (see their Fig.~1) increases the RMS value of impact parameter for the elastic collisions and restores, therefore, the expected hierarchy.
+As anticipated above, there are not many hints for fixing the phase of the amplitude. Still there is one more worth mentioning. For a more detailed discussion, see Sec.~7 in \bref{kklp11}, here we just outline the main ideas. The argument is related to the impact-parameter picture. It sounds natural that high-impact-parameter collisions, when the particles are merely glancing, would result rather in an elastic than inelastic scattering. And vice versa -- a head-on collision is likely to break the particles and lead to an inelastic scattering. Tab.~3 in the quoted table presents RMS impact-parameter values of elastic and inelastic collisions, derived for the four models. Surprisingly enough, the inelastic collisions came out more peripheral (RMS of $\approx 1.4\un{fm}$) than the elastic ones (RMS of $\approx 0.9\un{fm}$). The authors suggested a solution to this puzzle -- modifying the phase such that it raises sharply at low-$|t|$ region (see their Fig.~1) increases the RMS value of impact parameter for the elastic collisions and restores, therefore, the expected hierarchy.
 
 \section[el coulomb]{Coulomb interference}
 
@@ -147,7 +147,7 @@ We premise that we will often use high-energy and low-scattering-angle approxima
 
 \caption{Electromagnetic scattering in QED}
 
-QED is a relativistic QFT that can naturally account for the structure of the proton and its anomalous magnetic moment (see e.g. Sc.~6.2 in \bref{peskin} or Sc.~5.2 in \bref{chyla}). These are described by two form factors, the electric $G_{\rm E}(t)$ and the magnetic $G_{\rm M}(t)$, which are related to the distributions of charge and magnetization in the proton (see e.g. Sachs \bref{sachs62}). The leading contribution (one photon exchange, $\O{\al^2}$) to the cross-section has been calculated in \bref{block06} (Eq.~(29)). Since we are interested in the LHC energies ($\approx 7\un{TeV}$) and momentum transfers smaller than $|t| = 10\un{GeV^2}$, we may use high-energy and low-momentum-transfer limits \Eq{el high energy,el low angle}. Then, the result reads (both for $\rm pp$ and $\rm \bar p p$ scattering)
+QED is a relativistic QFT that can naturally account for the structure of the proton and its anomalous magnetic moment (see e.g. Sec.~6.2 in \bref{peskin} or Sec.~5.2 in \bref{chyla}). These are described by two form factors, the electric $G_{\rm E}(t)$ and the magnetic $G_{\rm M}(t)$, which are related to the distributions of charge and magnetization in the proton (see e.g. Sachs \bref{sachs62}). The leading contribution (one photon exchange, $\O{\al^2}$) to the cross-section has been calculated in \bref{block06} (Eq.~(29)). Since we are interested in the LHC energies ($\approx 7\un{TeV}$) and momentum transfers smaller than $|t| = 10\un{GeV^2}$, we may use high-energy and low-momentum-transfer limits \Eq{el high energy,el low angle}. Then, the result reads (both for $\rm pp$ and $\rm \bar p p$ scattering)
 \eqref{{\d\si^{\rm EM}_{\rm QED, OPE}\over\d t} = {4\pi \al^2\over t^2} G_{\rm eff}^4(t)\ .}{el dsdt em}
 The symbol $G_{\rm eff}(t)$ represents an ``effective'' form factor that is a combination of the electric and magnetic form factors:
 \eqref{G^2_{\rm eff}(t) = {G_{\rm E}(t)^2 + \ta G_{\rm M}(t)^2 \over 1 + \ta},\qquad \ta = - {t\over 4m^2}\ .}{el ff eff}
@@ -166,7 +166,7 @@ Hoffstadter's parameterization was improved by Borkowski et al.~\bref{borkowski7
 G_{E}(t) = \sum_{i=1}^4 {{c_{E, i}}\over w_{E, i} - t},\qquad
 G_{M}(t) = \mu\sum_{i=1}^4 {{c_{M, i}}\over w_{M, i} - t}
 \ .}{el ff borkowski}
-The parameter values can be found in Tb.~4 in \bref{borkowski75}.
+The parameter values can be found in Tab.~4 in \bref{borkowski75}.
 
 Kelly \bref{kelly04} proposed a class of form-factor parameterizations that is consistent with dimensional scaling at high $|t|$. His parameterization is given by a ratio of two polynomials
 \eqref{G(t) = {\sum_k^n a_k \ta^k \over \sum_k^{n+2} b_k \ta^k}\ .}{el ff kelly}
@@ -178,7 +178,7 @@ Since the degree of the polynomial in the denominator is higher by two compared 
 
 \caption{Electromagnetic scattering in eikonal description}
 
-The eikonal approximation is a high-energy and low-scattering-angle (i.e. the kinematic domain of elastic scattering at the LHC) approximation in QM (see e.g. Sc.~2.3 in \bref{barone} or Sc.~4.2.7 in \bref{formanek QM}). It relates the scattering amplitude $F(t)$ to the eikonal function $\de(b)$
+The eikonal approximation is a high-energy and low-scattering-angle (i.e. the kinematic domain of elastic scattering at the LHC) approximation in QM (see e.g. Sec.~2.3 in \bref{barone} or Sec.~4.2.7 in \bref{formanek QM}). It relates the scattering amplitude $F(t)$ to the eikonal function $\de(b)$
 \eqref{F(t) = {s\over 2i}\int\limits_0^\infty b\,\d b\,J_0(b\sqrt{|t|})\,\left( \e^{2i\de(b)} - 1 \right)}{el eik rep}
 (using the normalization of Cahn \bref{cahn82}). The \em{eikonal} function can be calculated from a potential $V(x, y, z)$
 \eqref{\de(b) = - {1\over 4 p_{\rm lab}} \int\limits_{-\infty}^{\infty} V(\vec b, z)\ \d z}{el eik app}
@@ -308,7 +308,7 @@ In this part we will review the results summarized above and discuss their valid
 
 The first quantity to review is the Coulomb amplitude. We have pursued two approaches to derive it -- the QED and the eikonal model. While we consider QED the best available tool to describe electromagnetic interactions, we have presented the leading order (OPE) to the scattering amplitude only, see \Eq{el dsdt em}. A natural question could be raised -- is the leading order good enough? An answer can be found in the already quoted works on form factors \bref{arrington07,puckett10}. The authors used two methods for extracting the form factors. One is based on comparing the measured differential cross-section $\d\si/\d t$ with the one expected for point like particles (Mott formula, calculated also in OPE order, see e.g. \bref{chyla}). In the other method a longitudinally polarized electron beam is used and the polarization of the recoil proton is measured (more details e.g. in \bref{gayou02}). Then, these two methods are found to disagree for $|t| \gs 1\un{GeV^2}$ (see e.g. Fig.~2 in \bref{arrington07}). The authors argue that most of the discrepancy disappears if two-photon-exchange (TPE) contributions are included. Moreover these corrections alter mostly the results of the cross-section method (which is very similar to our form-factor application). This leads us to the conclusion that the OPE cross-section presented in \Eq{el dsdt em} is only accurate for $|t|$ below $1\un{GeV^2}$.
 
-We have also calculated the Coulomb amplitude in the eikonal formalism, see \Eq{el cahn 2}. This amplitude receives contributions of all orders of $\al$ and thus may seem to include the TPE corrections. It is only partially true. The amplitude has been generated via the eikonal relation \Eq{el eik rep} with the eikonal calculated from the OPE amplitude. According to Sc.~6.2 in \bref{barone}, this procedure is for large $s$ equivalent to summing diagrams of the type \Fg{el diagrams2} A. Hence only this type of diagrams is included in the eikonal calculation. We have seen that the eikonal complete amplitude differs from the Born ($\equiv$ OPE) one merely by phase (\Eq{el cahn 2}). This keeps the corresponding cross-section unchanged and thus it is insufficient to reconcile the two form-factor-extraction methods. These facts bring us to the conclusion that neither the eikonal full amplitude can be trusted above $|t|\approx 1\un{GeV^2}$.
+We have also calculated the Coulomb amplitude in the eikonal formalism, see \Eq{el cahn 2}. This amplitude receives contributions of all orders of $\al$ and thus may seem to include the TPE corrections. It is only partially true. The amplitude has been generated via the eikonal relation \Eq{el eik rep} with the eikonal calculated from the OPE amplitude. According to Sec.~6.2 in \bref{barone}, this procedure is for large $s$ equivalent to summing diagrams of the type \Fg{el diagrams2} A. Hence only this type of diagrams is included in the eikonal calculation. We have seen that the eikonal complete amplitude differs from the Born ($\equiv$ OPE) one merely by phase (\Eq{el cahn 2}). This keeps the corresponding cross-section unchanged and thus it is insufficient to reconcile the two form-factor-extraction methods. These facts bring us to the conclusion that neither the eikonal full amplitude can be trusted above $|t|\approx 1\un{GeV^2}$.
 
 \fig{fig/pdf/el_diagrams2.pdf}{el diagrams2}{A: The type of diagrams that is included in the eikonal calculation of the complete Coulomb amplitude. B -- E: the lowest order sub-diagrams missing in the eikonal calculation. The double line in E represents an excited state of a proton.}
 
@@ -378,7 +378,7 @@ However, this equation requires the knowledge of the hadronic amplitude outside 
 While this is a serious conceptual issue, it has little practical impact for calculating the Coulomb-interference. It is due to the rapid fall off of the hadronic amplitude (it drops by $\gs 6$ orders of magnitude between $|t|=0$ and $20\un{GeV^2}$, see \Fg{el mod dsdt large}). Moreover the hadronic amplitude enters the interference formula \Eq{el phase Cahn} as a ratio $\FH(t') / \FH(t)$, where $t$ is the point of evaluation and $t'$ is the integration variable. Therefore the ratio must vanish when $t'$ is much larger than $t$ (i.e. $T$ is sufficiently large):
 \eqref{{\FH(t')\over \FH(t)} \approx 0\ , \quad\hbox{ for }\quad t' \gs t + T\ .}{el T 1}
 Assuming that this stays valid even if $t'$ enters the kinematically forbidden region\footnote{%
-This can be justified for at least most of the eikonal-formulated hadronic models. Their eikonal amplitudes ($\equiv \exp(2i\de(b)) - 1$) are typically of a Gaussian-like profile with the RMS of about $1\un{fm}$ (see e.g. Fg.~6.6 in \bref{barone}). The $t$-amplitude can be calculated through \Eq{el eik rep}. For very high $|t|$ values the factor $J_0(b\sqrt{-t})$ becomes a rapidly oscillating function and one may expect a heavy suppression of the integral. No matter whether $t$ falls into kinematically allow region. It also explains the fast decrease of the hadronic cross-section. 
+This can be justified for at least most of the eikonal-formulated hadronic models. Their eikonal amplitudes ($\equiv \exp(2i\de(b)) - 1$) are typically of a Gaussian-like profile with the RMS of about $1\un{fm}$ (see e.g. Fig.~6.6 in \bref{barone}). The $t$-amplitude can be calculated through \Eq{el eik rep}. For very high $|t|$ values the factor $J_0(b\sqrt{-t})$ becomes a rapidly oscillating function and one may expect a heavy suppression of the integral. No matter whether $t$ falls into kinematically allow region. It also explains the fast decrease of the hadronic cross-section. 
 }, \Eq{el phase Cahn} yields
 \eqref{\Ps_{\rm Cahn}(t) =
 \pm \underbrace{\lim\limits_{\ta \to -\infty} \left[
