--- a/2010/thesis/first_el_measurement.tex
+++ b/2010/thesis/first_el_measurement.tex
@@ -196,7 +196,7 @@ $\si_{\rm R} \approx 0.4\un{\mu rad}$ for $y$ and $5.7\un{\mu rad}$ for $x$ proj
 
 Suppose that $h(\th)$ is the true distribution of the (non-smeared) scattering angle $\th$
 %($h(\th)$ proportional to $\d\si/\d\th$ cross-section)
-. Then, after the acceptance correction etc., we would reconstruct a distribution $h'(\th')$ smeared due to the final angular resolution. These distributions can be related by an integral transformation (see e.g.~Sc.~16.6.1 in \bref{riley10} or Sc.~1.8.2 in \bref{becvar}):
+. Then, after the acceptance correction etc., we would reconstruct a distribution $h'(\th')$ smeared due to the final angular resolution. These distributions can be related by an integral transformation (see e.g.~Sec.~16.6.1 in \bref{riley10} or Sec.~1.8.2 in \bref{becvar}):
 \eqref{h'(\th') = \int {\d\ph\over 2\pi} \int \d\De\th_x\ G(\De\th_x) \int \d\De\th_y\ G(\De\th_y)
 	\ \left| \d\th\over\d\th' \right|\ h(\th)\ ,
 }{felm unf sm model}
