--- a/2010/thesis/introduction.tex
+++ b/2010/thesis/introduction.tex
@@ -16,4 +16,4 @@ matrix				& $\mat M$				& slanted\cr\ln
 software parameter  & \pmt{parameter}		& typewriter\cr\ln
 }}}
 
-\> standar abbreviations Eq., Tb., Fg. (+Fgs, ...), Sc. + Ch.
+\> standar abbreviations Eq., Tab., Fig. (+Figs, ...), Sec. + Ch.
