--- a/2010/thesis/thesis.tex
+++ b/2010/thesis/thesis.tex
@@ -159,7 +159,7 @@ Keywords:	& [ 3-5 keywords in English]\cr
 \DefAbb{CERN}{Conseil Europ\' eenne pour la Recherche Nucl\' eaire}{European Organization for Nuclear Research in Geneva.}
 \DefAbb{CKL}{corrected Kundr\' at-Lokaj\' i\v cek}{Refers to the Coulomb-interference formula Eq.~\ref{el phase CKL}.}
 \DefAbb{CMS}{Center Of Mass reference system}{}
-\DefAbb{HP}{Hard Pomeron}{A version of the model of Islam et al., see Sc.~\sref{el models}.}
+\DefAbb{HP}{Hard Pomeron}{A version of the model of Islam et al., see Sec.~\sref{el models}.}
 \DefAbb{IR}{InfraRed}{}
 \DefAbb{KL}{Kundr\' at-Lokaj\' i\v cek}{Refers to the Coulomb-interference formula Eq.~\ref{el phase KL}.}
 \DefAbb{LHC}{Large Hadron Collider}{The largest collider in the world.}
@@ -171,7 +171,7 @@ Keywords:	& [ 3-5 keywords in English]\cr
 \DefAbb{QCD}{Quantum ChromoDynamics}{}
 \DefAbb{QM}{Quantum Mechanics}{}
 \DefAbb{RMS}{Root Mean Square}{}
-\DefAbb{RP}{Roman Pot}{A a pot-shaped movable beam-pipe insertion, see Sc.~\sref{ttm det}.}
+\DefAbb{RP}{Roman Pot}{A a pot-shaped movable beam-pipe insertion, see Sec.~\sref{ttm det}.}
 \DefAbb{SWY}{Simplified West-Yennie}{Refers to the Coulomb-interference formula Eq.~\ref{el phase SWY}.}
 \DefAbb{TDR}{Technical Design Report}{}
 \DefAbb{TOTEM}{TOTal and Elastic Measurements}{An LHC experiment focused on the forward hadronic phenomena.}
