--- a/2010/thesis/totem.tex
+++ b/2010/thesis/totem.tex
@@ -16,7 +16,7 @@ The TOTEM experiment \bref{totem04,totem08,totem10} is dedicated to measurement 
 
 We have discussed theoretical/phenomenological description of the elastic scattering in \Sc{el}. Looking at the model predictions in \Fg{el mod dsdt large}, one can see differences of several orders of magnitude. TOTEM plans to measure the differential cross-section in the $|t|$-range from about $10^{-3}\un{GeV^2}$ (the domain of Coulomb-hadronic interference) to more than $10\un{GeV^2}$. This large coverage can be achieved by exploiting several running scenarios -- see the end of \Sc{rp measurement}. \TODO{The aimed precision is such that TOTEM will be able to confirm or rule out the model predictions and thus focus the direction of the theoretical research.}
 
-As much as the model predictions differ for the elastic cross-section, they differ for the total-cross section. From Tb.~2 in \bref{kklp11} one can read a variation between $95$ and $110\un{mb}$. Extrapolations from lower energy measurements, see \Fg{sigma tot}, yield even higher uncertainty: from about $85\un{mb}$ to $120\un{mb}$. TOTEM plans to measure the total cross-section with the luminosity independent method, see \Sc{ttm tcs} for details. This method takes as an input the elastic and inelastic event rates and thus is closely related to the other two points of the physics programme. TOTEM aims at the final precision about $1\percent$, which would provide a decisive answer to many total-cross-related hypothesis.
+As much as the model predictions differ for the elastic cross-section, they differ for the total-cross section. From Tab.~2 in \bref{kklp11} one can read a variation between $95$ and $110\un{mb}$. Extrapolations from lower energy measurements, see \Fg{sigma tot}, yield even higher uncertainty: from about $85\un{mb}$ to $120\un{mb}$. TOTEM plans to measure the total cross-section with the luminosity independent method, see \Sc{ttm tcs} for details. This method takes as an input the elastic and inelastic event rates and thus is closely related to the other two points of the physics programme. TOTEM aims at the final precision about $1\percent$, which would provide a decisive answer to many total-cross-related hypothesis.
 
 \Fg{ttm processes} shows typical event topologies for certain diffractive-process classes that TOTEM plans to measure. Looking at the cross-section estimates, one can see that these processes form a large part of the total cross-section. A characteristic property of these processes is the presence of scattering products at very forward directions. Using the definition of pseudorapidity ($\th$ denotes the scattering angle)
 \eqref{\et = - \log \tan {\th\over 2}\ ,}{pseudorapidity}
@@ -53,7 +53,7 @@ There is one telescope on each side of IP5 (see \Fg{t1 installed}). Each telesco
 \emfig
 
 The CSC detectors are gaseous detectors (multi-wire proportional chambers) with both cathode plates segmented into strips. These strips and the anode wires are oriented at $60^\circ$ with respect to each other. Thus there are 3 read-out coordinates, which enables reconstruction of events with several 
-tracks. The cathode strips are $4.5\un{mm}$ wide and placed with $5\un{mm}$ pitch. The anode wires, used for triggering, have a diameter of $30\un{\mu m}$ and are installed with $3\un{mm}$ pitch. The gas gap is as wide as $10\un{mm}$ filled with $\rm Ar/CO_2/CF_4$ mixture. The size of the detectors is growing with increasing distance from the IP, reaching the maximum of $\approx 1\un{m} \times 0.68\un{m}$. The spatial resolution of one CSC detector is about $1\un{mm}$. For further details we refer the reader to Sc.~5.2 in \bref{totem08}.
+tracks. The cathode strips are $4.5\un{mm}$ wide and placed with $5\un{mm}$ pitch. The anode wires, used for triggering, have a diameter of $30\un{\mu m}$ and are installed with $3\un{mm}$ pitch. The gas gap is as wide as $10\un{mm}$ filled with $\rm Ar/CO_2/CF_4$ mixture. The size of the detectors is growing with increasing distance from the IP, reaching the maximum of $\approx 1\un{m} \times 0.68\un{m}$. The spatial resolution of one CSC detector is about $1\un{mm}$. For further details we refer the reader to Sec.~5.2 in \bref{totem08}.
 
 
 
@@ -63,7 +63,7 @@ The T2 telescopes are installed in the forward shielding of CMS between the vacu
 
 There is one telescope on each side of IP5, see \Fg{t2 installed}. Each telescope consists of two quarters as shown in \Fg{t2 quarter}. Each quarter includes 5 semicircular planes, each equipped with 2 back-to-back mounted Gas Electron Multiplier (GEM) detectors. Each detector has an azimuthal coverage of $192^\circ$, therefore there is an overlap between the two quarters within each telescope.
 
-The GEM detectors are gaseous detectors where the electron multiplication is realized by three perforated Cu-clad polyimide foils, separated by $2\un{mm}$. The inner radius of the perforation holes is $65\un{\mu m}$, their density lies between $50$ and $100/\un{mm^2}$ \TODO{check}. With an electric field about $3.6 \un{kV/cm}$ between the GEM foils, the overall gas overall amplification is roughly $8000$. The GEM detectors have double read-out: strips (radial coordinate) and pads (coarse radial and azimuthal). The strip radia range from $43$ to $144\un{mm}$, their width and spacing is $80$ and $400\un{\mu m}$ respectively. The pads, used for triggering, are of sizes from $2\times 2\un{mm^2}$ to $7\times 7\un{mm^2}$. The spatial resolution is about $0.15\un{mm}$ in the radial direction and $0.8^\circ$ in the azimuthal one. Further details can be found in Sc.~5.3 in \bref{totem08}.
+The GEM detectors are gaseous detectors where the electron multiplication is realized by three perforated Cu-clad polyimide foils, separated by $2\un{mm}$. The inner radius of the perforation holes is $65\un{\mu m}$, their density lies between $50$ and $100/\un{mm^2}$ \TODO{check}. With an electric field about $3.6 \un{kV/cm}$ between the GEM foils, the overall gas overall amplification is roughly $8000$. The GEM detectors have double read-out: strips (radial coordinate) and pads (coarse radial and azimuthal). The strip radia range from $43$ to $144\un{mm}$, their width and spacing is $80$ and $400\un{\mu m}$ respectively. The pads, used for triggering, are of sizes from $2\times 2\un{mm^2}$ to $7\times 7\un{mm^2}$. The spatial resolution is about $0.15\un{mm}$ in the radial direction and $0.8^\circ$ in the azimuthal one. Further details can be found in Sec.~5.3 in \bref{totem08}.
 
 % gas detector, radiation hard, high rate, good spatial, and timing resolution
 
@@ -98,7 +98,7 @@ In order to minimize the distance between the RP edge facing the beam and the se
 
 The silicon sensors are single-sided $\rm p^+$-$\rm n$ micro-strip detectors with $512$ strips at a pitch $P = 66\un{\mu m}$, processed on very high resistivity
 %($> 10\un{k\Om\ cm}$)
-$n$-type silicon wafers. The strips are oriented at $45^\circ$ with respect to the edge facing the beam (the cut edge). The biasing voltage is of the order of $100\un{V}$. For better performance, the sensors are cooled down to a temperature about $-10^\circ\rm C$. The $512$ strip are read out by four VFAT chips (see \bref{vfat}), that is $128$ channels each. For more details on the silicon sensors, we refer the reader to Sc.~4.3 in \bref{totem08}.
+$n$-type silicon wafers. The strips are oriented at $45^\circ$ with respect to the edge facing the beam (the cut edge). The biasing voltage is of the order of $100\un{V}$. For better performance, the sensors are cooled down to a temperature about $-10^\circ\rm C$. The $512$ strip are read out by four VFAT chips (see \bref{vfat}), that is $128$ channels each. For more details on the silicon sensors, we refer the reader to Sec.~4.3 in \bref{totem08}.
 
 In order to refer to any component of the RP system a naming scheme was defined in \bref{totem-rp-naming}. Since we will use it in what follows, we summarize the scheme in \Tb{rp naming scheme}. For example, the 2nd plane in the near horizontal RP in the $220\un{m}$ station in the right arm can be referred as 56-220-near-hor-2.
 
@@ -171,10 +171,10 @@ This definition follows, in fact, from the low-scattering-angle approximation in
 
 Since the magnetic field within the RP stations is negligible, protons follow a straight trajectory there. The relation between RP sensor measurements and the parameters of the trajectory is therefore simple (for details see \Sc{al psi}). What is much more interesting is the proton transport from the IP to the RP stations. We will discuss it in the rest of this section.
 
-The transverse motion of protons in the LHC can be described by a solution of the Hill's equation (see e.g.~Sc.~3.3 in \bref{wilson} or Ch.~4 in \bref{dolezal}):
+The transverse motion of protons in the LHC can be described by a solution of the Hill's equation (see e.g.~Sec.~3.3 in \bref{wilson} or Ch.~4 in \bref{dolezal}):
 \eqref{x(s) = \sqrt{\be(s) \ep}\ \cos\big(\phi(s) + \phi_0\big)\ .}{ttm hill sol}
 We have written the solution for the horizontal direction only, for the vertical it is analogous. The solution has a form of oscillations with the amplitude given by the emittance $\ep$ (a measure of the beam size and divergence\footnote{%
-A quantity which is used more often is the normalized emittance $\ep_{\rm N} = \be\ga \ep$. $\be$ and $\ga$ are the relativistic factors, see \Eq{sm lorentz}. The advantage of the normalized emittance is that it does not change during beam acceleration, see Sc.~4.1 in~\bref{wilson}.
+A quantity which is used more often is the normalized emittance $\ep_{\rm N} = \be\ga \ep$. $\be$ and $\ga$ are the relativistic factors, see \Eq{sm lorentz}. The advantage of the normalized emittance is that it does not change during beam acceleration, see Sec.~4.1 in~\bref{wilson}.
 }) and the $\be(s)$ function (reflects the layout and strengths of the LHC magnets). The phase of the oscillations is given by $\phi(s)$ which is related to $\be(s)$ by $\d\phi/\d s = 1/\be(s)$.
 
 From \Eq{ttm hill sol} one can read off the amplitude of the oscillations, which effectively determines the beam size:
@@ -184,13 +184,13 @@ This quantity is often called a \em{beam sigma}. The beam size is of a special i
 By differentiating \Eq{ttm hill sol} one can obtain the evolution proton angles $\th_x = \d x/\d s$. Again, one can extract the amplitude of its oscillations, that is a measure of the beam angular divergence. Evaluating it at the IP yields
 \eqref{\si_{\th^*} = \sqrt{\ep\over\be^*}\ .}{ttm beam div}
 
-The solution \Eq{ttm hill sol} was derived for protons of the nominal momentum $p_{\rm nom}$. If the actual proton momentum differs by $\De p = \xi p_{\rm nom}$, one has to add a term $D(s) \xi$ to the solution, see Sc.~5.2 in~\bref{wilson}. Then, for the proton transport from the IP to a position $s$ one can write (see Sc.~5.2.4 in~\bref{wilson})
+The solution \Eq{ttm hill sol} was derived for protons of the nominal momentum $p_{\rm nom}$. If the actual proton momentum differs by $\De p = \xi p_{\rm nom}$, one has to add a term $D(s) \xi$ to the solution, see Sec.~5.2 in~\bref{wilson}. Then, for the proton transport from the IP to a position $s$ one can write (see Sec.~5.2.4 in~\bref{wilson})
 \eqref{x(s) =\ L_x(s, \ldots)\, \th_x^* + v_x(s,\ldots)\, x^* + D_x(s,\ldots)\,\xi}{ttm lin par}
 and equivalently for the vertical direction. In the previous relation we have introduced the \em{effective length} $L$, the \em{magnification} $v$ and the \em{dispersion} $D$, we will refer to them as \em{optical functions}. These functions depend on the distance $s$ from the IP, but may also depend on the variables $\th_x^*$, $x^*$ and $\xi$. For the optics of practical interest, however, the dependence on $\xi$ is the only relevant one.
 
 Strictly speaking, the form of \Eq{ttm lin par} is oversimplified. Due to higher order corrections, $x$ and $y$ projections are not strictly independent and consequently one should include also dependence on $\th_y^*$ and $y^*$. For the nominal optics these terms are negligible. However in reality, due to magnet misalignments (mostly their rotations), the binding between $x$ and $y$ projections may become important, see e.g.~\Fg{al el plots yx}.
 
-In practice the optical functions are calculated with dedicated computer programs such as MAD-X \bref{mad-x}. Since they might be to slow for large Monte Carlo simulations, TOTEM's software (see \Sc{sr}) includes a module that calculates a polynomial parameterization of a MAD-X output, for details see Sc.~6.4 in \bref{hubert}.
+In practice the optical functions are calculated with dedicated computer programs such as MAD-X \bref{mad-x}. Since they might be to slow for large Monte Carlo simulations, TOTEM's software (see \Sc{sr}) includes a module that calculates a polynomial parameterization of a MAD-X output, for details see Sec.~6.4 in \bref{hubert}.
 
 For standard LHC runs one may expect relative error of beam momentum measurement
 \eqref{\bar\xi = \O{10^{-3}}}{ttm energy off}
